update tx apis lab question 2

--- a/apis/texas-apis/tx-apis.ipynb
+++ b/apis/texas-apis/tx-apis.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now make another API call, and display only those results who had total receipts of 0."
+    "Now make another API call, and display only those results in zip code 75002 who had total receipts of 0."
    ]
   },
   {
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "len(results_with_zero)\n",
-    "# 98 "
+    "# 99"
    ]
   },
   {
