--- a/apis/texas-apis/tx-apis.ipynb
+++ b/apis/texas-apis/tx-apis.ipynb
@@ -97,11 +97,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_of_highest = None"
+    "import requests\n",
+    "\n",
+    "# ?location_zip=75002&$order=total_receipts DESC&$limit=5'''\n",
+    "def request_receipts(option_params = {}):\n",
+    "    root_url = 'https://data.texas.gov/resource/naix-2893.json'\n",
+    "    response = requests.get(root_url, params = option_params)\n",
+    "    return response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = request_receipts({'location_zip': '75002'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_receipts = [int(result['total_receipts']) for result in results]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[403845, 359448, 344838, 325150, 321281]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(total_receipts, reverse = True)[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "option_params = {'location_zip': '75002', '$limit': '5', '$order': 'total_receipts DESC'}\n",
+    "soql_query_results = request_receipts(option_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[403845, 359448, 344838, 341086, 333538]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soql_receipts = [int(soql_result['total_receipts']) for soql_result in soql_query_results]\n",
+    "soql_receipts"
    ]
   },
   {
