--- a/apis/texas-data-cleaning/tx-lab.ipynb
+++ b/apis/texas-data-cleaning/tx-lab.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "61"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        " 'total_receipts': '100368'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,25 +197,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "set()"
+       "{'207 SAN JACINTO BLVD STE 200', '3600 MCKINNEY AVE STE 100'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "location_addresses = []\n",
+    "def get_location_addresses(restaurant_receipts):\n",
+    "    return [receipt['location_address'] for receipt in restaurant_receipts]\n",
     "\n",
-    "set(location_addresses)\n",
-    "# {'207 SAN JACINTO BLVD STE 200', '3600 MCKINNEY AVE STE 100'}"
+    "# set(location_addresses)\n",
+    "# {'207 SAN JACINTO BLVD STE 200', '3600 MCKINNEY AVE STE 100'}\n",
+    "\n",
+    "# location_addresses[0:5]"
    ]
   },
   {
@@ -252,44 +255,44 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-77ee7e89b140>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdallas_maxs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'location_address'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m# '3600 MCKINNEY AVE STE 100'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
-   "source": [
-    "dallas_maxs = None\n",
-    "\n",
-    "\n",
-    "dallas_maxs[0]['location_address']\n",
-    "# '3600 MCKINNEY AVE STE 100'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "25"
+       "{'3600 MCKINNEY AVE STE 100'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(dallas_maxs)\n",
-    "# 25"
+    "dallas_maxs = [receipt['total_revenue'] for receipt in restaurant_receipts if receipt['location_address'] == '3600 MCKINNEY AVE STE 100']\n",
+    "\n",
+    "\n",
+    "set(get_location_addresses(dallas_maxs))\n",
+    "# set(dallas_maxs)\n",
+    "# '3600 MCKINNEY AVE STE 100'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'3600 MCKINNEY AVE STE 100'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter(lambda receipt: receipt['location_address'] == '3600 MCKINNEY AVE STE 100')\n",
+    "set(get_location_addresses(filter_list))"
    ]
   },
   {
