add dendrogram feature selection

--- a/3-dendrogram-bnb.ipynb
+++ b/3-dendrogram-bnb.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "  n_features_to_select=35, step=1, verbose=0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "0.4628732594292488"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "       'neighbourhood_group_cleansed_Reinickendorf'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,14 +237,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The pruned features are the top 35 features"
+    "To see which features may still be redundant, we should explore correlations between the data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see which features may still be redundant, we should explore correlations between the data."
+    "First we select the top six features."
    ]
   },
   {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -316,12 +316,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A problem we have is that we still have a lot of features.  So we take a guess that we could have overlap in the geographic features.  So we gather together all of the columns that seem to have a geographic component."
+    "And we can express this show this mathematically with the correlation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['longitude', 'bedrooms', 'bedrooms_is_na', 'host_response_rate_is_na',\n",
+       "       'summary_is_na', 'license_is_na', 'zipcode_is_na', 'bathrooms_is_na',\n",
+       "       'beds_is_na', 'host_sinceIs_year_end', 'requires_license',\n",
+       "       'state_is_berlin', 'street_is_berlin_berlin_germany',\n",
+       "       'property_type_Loft', 'property_type_other',\n",
+       "       'neighbourhood_group_cleansed_Mitte',\n",
+       "       'neighbourhood_group_cleansed_Neukölln',\n",
+       "       'neighbourhood_group_cleansed_Reinickendorf',\n",
+       "       'neighbourhood_group_cleansed_other', 'neighbourhood_Wedding',\n",
+       "       'neighbourhood_Wilmersdorf', 'host_neighbourhood_Wilmersdorf',\n",
+       "       'cancellation_policy_super_strict_60', 'room_type_Private room',\n",
+       "       'room_type_Shared room', 'host_response_time_other',\n",
+       "       'neighbourhood_cleansed_Moabit Ost',\n",
+       "       'neighbourhood_cleansed_Moabit West',\n",
+       "       'neighbourhood_cleansed_Parkviertel', 'zip_dists_1082',\n",
+       "       'zip_dists_1335', 'zip_dists_other', 'last_reviewMonth_2.0',\n",
+       "       'last_reviewMonth_3.0', 'last_reviewMonth_12.0'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_pruned.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,34 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(geo_cols)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We see that almost half of our columns are geographic."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +582,10 @@
    "source": [
     "indexed_corr = (X_train_pruned.corr(method = 'spearman') > .60).sum()\n",
     "correlated_cols = indexed_corr[indexed_corr > 1].index\n",
-    "correlated_cols"
+    "\n",
+    "correlated_cols\n",
+    "\n",
+    "# indexed_corr"
    ]
   },
   {
@@ -1251,6 +1264,13 @@
    "source": [
     "feature_importances(X_test_dropped, model)[:, :-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
